@@ -51,6 +51,9 @@ Bug Fixes
 * SOLR-3725: Fixed package-local-src-tgz target to not bring in unnecessary jars
   and binary contents.  (Michael Dodsworth via rmuir)
 
+* SOLR-3649: Fixed bug in JavabinLoader that caused deleteById(List<String> ids)
+  to not work in SolrJ (siren)
+
 ==================  4.0.0-BETA ===================
 
 
